--- a/rsbc_df_vips_adapter_gateway/revproxy_build.yml
+++ b/rsbc_df_vips_adapter_gateway/revproxy_build.yml
@@ -9,16 +9,16 @@ objects:
     creationTimestamp: null
     labels:
       shared: "true"
-    name: nginx-120-image
+    name: nginx-120-image-latest
   spec:
     lookupPolicy:
       local: false
     tags:
     - annotations:
-        openshift.io/imported-from: registry.redhat.io/rhscl/nginx-120-rhel7:1-47
+        openshift.io/imported-from: registry.redhat.io/rhscl/nginx-120-rhel7:1-47.1661531726
       from:
         kind: DockerImage
-        name: registry.redhat.io/rhscl/nginx-120-rhel7:1-47
+        name: registry.redhat.io/rhscl/nginx-120-rhel7:1-47.1661531726
       generation: null
       importPolicy: {}
       name: "1"
@@ -34,7 +34,7 @@ objects:
     creationTimestamp: null
     labels:
       shared: "true"
-    name: nginx-rev-proxy-image
+    name: ride-vips-adapter-nginx-rev-proxy-image
   spec:
     lookupPolicy:
       local: false
@@ -42,9 +42,9 @@ objects:
 - apiVersion: v1
   kind: BuildConfig
   metadata:
-    name: nginx-proxy-build
+    name: ride-vips-adapter-nginx-proxy-build
     labels:
-      name: nginx-proxy-build
+      name: ride-vips-adapter-nginx-proxy-build
   spec:
     triggers:
       - type: ConfigChange
@@ -57,9 +57,9 @@ objects:
         dockerfilePath: Dockerfile
         from:
           kind: ImageStreamTag       
-          name: nginx-120-image:1
+          name: nginx-120-image-latest:1
       type: Docker
     output:
       to:
         kind: ImageStreamTag
-        name: 'nginx-rev-proxy-image:1'
+        name: 'ride-vips-adapter-nginx-rev-proxy-image:1'
