added vips gateway adapter deployment

--- a/rsbc_df_vips_adapter_gateway/nginx.conf
+++ b/rsbc_df_vips_adapter_gateway/nginx.conf
@@ -80,7 +80,7 @@ http {
 
     server { # simple reverse-proxy
     listen       8083;
-    server_name  vips-api-service;
+    server_name  vipsirp-api-service;
     # access_log   logs/domain2.access.log  main;
 
     # serve static files
@@ -91,7 +91,7 @@ http {
 
     # pass requests for dynamic content to rails/turbogears/zope, et al
     location / {
-      proxy_pass      http://vips-api-service;
+      proxy_pass      http://vipsirp-api-service;
     }
   }
 
