--- a/rsbc_df_vips_adapter_gateway/networking_deploy_test.yml
+++ b/rsbc_df_vips_adapter_gateway/networking_deploy_test.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: vipsirp-api-service
+  namespace: be5301-test
 spec:
   type: ExternalName
   externalName: digitalforms-viirp-api-svc.c220ad-dev.svc.cluster.local
@@ -13,6 +14,7 @@ metadata:
   labels:
     app: ride-vips-adapter-rev-proxy
   name: ride-vips-adapter-rev-proxy
+  namespace: be5301-test
 spec:
   replicas: 1
   selector:
@@ -27,6 +29,13 @@ spec:
       containers:
       - image: image-registry.openshift-image-registry.svc:5000/be5301-dev/ride-vips-adapter-nginx-rev-proxy-image:1
         name: ride-vips-adapter-rev-proxy
+        resources:
+          limits:
+            cpu: 200m
+            memory: 200Mi
+          requests:
+            cpu: 100m
+            memory: 200Mi
         env:
           - name: NGINX_CONF_PATH
             value: /tmp/nginx.conf
@@ -51,6 +60,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: ride-vips-nginx-proxy-cluster-ip
+  namespace: be5301-test
 spec:
   ports:
     - protocol: TCP
@@ -70,6 +80,7 @@ kind: Route
 apiVersion: route.openshift.io/v1
 metadata:
   name: ride-vips-gateway-adapter
+  namespace: be5301-test
 spec:
   to:
     kind: Service
@@ -81,3 +92,24 @@ spec:
     termination: edge
     insecureEdgeTerminationPolicy: Redirect
   wildcardPolicy: None
+
+---
+
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+  creationTimestamp: null
+  namespace: be5301-test
+  labels:
+    app: ride-vips-adapter-rev-proxy
+  name: ride-vips-adapter-rev-proxy-autoscale
+spec:
+  maxReplicas: 2
+  minReplicas: 1
+  scaleTargetRef:
+    apiVersion: v1
+    kind: Deployment
+    name: ride-vips-adapter-rev-proxy
+  targetCPUUtilizationPercentage: 85
+
+---
