--- a/rsbc_df_vips_adapter_gateway/nginx.conf
+++ b/rsbc_df_vips_adapter_gateway/nginx.conf
@@ -44,15 +44,21 @@ http {
         # Load configuration files for the default server block.
         # include      /opt/app-root/etc/nginx.default.d/*.conf;
 
-        location / {
-    #   proxy_pass      http://poc-service;
-        proxy_pass      https://www.nginx.com;
+            # serve static files
+    location ~ ^/(images|javascript|js|css|flash|media|static)/  {
+      root    /opt/rh/rh-nginx120/root/usr/share/nginx/html;
+      expires 1d;
     }
 
-    location /test {
-    #   proxy_pass      http://poc-service;
-        proxy_pass      https://www.nginx.com;
-    }
+    #     location / {
+    # #   proxy_pass      http://poc-service;
+    #     proxy_pass      https://www.nginx.com;
+    # }
+
+    # location /test {
+    # #   proxy_pass      http://poc-service;
+    #     proxy_pass      https://www.nginx.com;
+    # }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:8080 default_server
         #
