--- a/rsbc_df_vips_adapter_gateway/networking_deploy_dev.yml
+++ b/rsbc_df_vips_adapter_gateway/networking_deploy_dev.yml
@@ -47,6 +47,31 @@ spec:
         - containerPort: 8080
         - containerPort: 8082
         - containerPort: 5000
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 8080
+          periodSeconds: 10
+          failureThreshold: 5
+          successThreshold: 1
+          timeoutSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 8080
+          initialDelaySeconds: 35
+          periodSeconds: 15
+          failureThreshold: 5
+          successThreshold: 1
+          timeoutSeconds: 10
+        startupProbe:
+          httpGet:
+            path: /
+            port: 8080
+          failureThreshold: 60
+          periodSeconds: 10
+          successThreshold: 1
+          timeoutSeconds: 10
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       volumes:
