--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -30,14 +30,10 @@ jobs:
         run: |
           docker image pull ${{ secrets.NGINX_BASE_IMAGE_TOOLS }}:${{env.base_image_tag}}
           docker image tag ${{ secrets.NGINX_BASE_IMAGE_TOOLS }}:${{env.base_image_tag}} nginx-custom:1
-      - name: Build Image
+      - name: Test Build Image
         run: |
           cd rsbc_df_vips_adapter_gateway
           docker build -t vips_adapter_build_test:1 .
-      - name: Test Connectivity
-        run: |
-          docker run -itd --name testadapter -p 80:8080 nginx-custom:1
-          curl localhost:80
         
 
 
