--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -1,16 +1,30 @@
-name: CI Checks for build
+name: Build and Push Image
 
 on:
   push:
     branches-ignore:   
       - 'release**'
-      - 'feature/ride294_buildpush'
 
 jobs:
-  test-build-image:
+  build-image:
     runs-on: ubuntu-latest
     env:
       build_config_name: "ride-vips-adapter-nginx-proxy-build"
       image_stream_name: " ride-vips-adapter-nginx-rev-proxy-image"
       image_tags: "dev"
       base_image_tag: "1"
+
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Authenticate and set context
+        uses: redhat-actions/oc-login@v1
+        with:
+          openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL_SILVER }}
+          openshift_token: ${{ secrets.OPENSHIFT_SA_PIPELINE_TOKEN_SILVER }}
+          namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools"
+      - name: Apply Build Yaml
+        run: |
+          cd rsbc_df_vips_adapter_gateway/github_actions_yamls
+          oc process -f revproxy_build_template.yml --param-file revproxy_build_params.yml --param OUTPUT_IMAGE_STREAM_TAG=build-${env.GITHUB_SHA} | oc apply -f -
