--- a/rsbc_df_vips_adapter_gateway/github_actions_yamls/revproxy_build_params.yml
+++ b/rsbc_df_vips_adapter_gateway/github_actions_yamls/revproxy_build_params.yml
@@ -3,3 +3,4 @@ BASE_IMAGE_TAG: "1"
 OUTPUT_IMAGE_STREAM_TAG: "2.0"
 BUILD_CONFIG_NAME: ride-vips-adapter-nginx-proxy-build-v2
 BASE_IMAGE_NAME: nginx-120-image-latest 
+NAMESPACE: be5301-tools
