--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -9,7 +9,7 @@ jobs:
   build-image:
     runs-on: ubuntu-latest
     env:
-      build_config_name: "ride-vips-adapter-nginx-proxy-build"
+      build_config_name: "ride-vips-adapter-nginx-proxy-build-v2"
       image_stream_name: " ride-vips-adapter-nginx-rev-proxy-image"
       image_tags: "dev"
       base_image_tag: "1"
@@ -28,3 +28,4 @@ jobs:
         run: |
           cd rsbc_df_vips_adapter_gateway/github_actions_yamls
           oc process -f revproxy_build_template.yml --param-file revproxy_build_params.yml --param OUTPUT_IMAGE_STREAM_TAG=build-$GITHUB_SHA | oc apply -f -
+          oc start-build ${{ env.build_config_name }} --follow --wait
