--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -28,4 +28,6 @@ jobs:
         run: |
           cd rsbc_df_vips_adapter_gateway/github_actions_yamls
           oc process -f revproxy_build_template.yml --param-file revproxy_build_params.yml --param OUTPUT_IMAGE_STREAM_TAG=build-$GITHUB_SHA | oc apply -f -
+      - name: Start the build and push
+        run: |
           oc start-build ${{ env.build_config_name }} --follow --wait
