--- a/.github/workflows/build_push_pr copy.yml
+++ b/.github/workflows/build_push_pr copy.yml
@@ -37,6 +37,9 @@ jobs:
         run: |
           echo 'merge with target'
           ls .github/workflows
+          git merge release_1_0
+          git checkout -b testprbranch
+          git push -u origin testprbranch
       - name: Build PR
         run: |
           echo 'build pr'
