--- a/.github/workflows/build_push_pr copy.yml
+++ b/.github/workflows/build_push_pr copy.yml
@@ -27,17 +27,18 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Authenticate and set context
-        uses: redhat-actions/oc-login@v1.1.2
-        with:
-          openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL_SILVER }}
-          openshift_token: ${{ secrets.OPENSHIFT_SA_PIPELINE_TOKEN_SILVER }}
-          namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools"
+      # - name: Authenticate and set context
+      #   uses: redhat-actions/oc-login@v1.1.2
+      #   with:
+      #     openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL_SILVER }}
+      #     openshift_token: ${{ secrets.OPENSHIFT_SA_PIPELINE_TOKEN_SILVER }}
+      #     namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools"
       - name: Merge with target
         run: |
           echo 'merge with target'
           ls .github/workflows
-          git checkout release_1_0
+          git branch -a
+          git checkout origin/release_1_0
           git merge feature/buildpushpr
           git checkout -b testprbranch
           git push -u origin testprbranch
