--- a/.github/workflows/build_push_pr copy.yml
+++ b/.github/workflows/build_push_pr copy.yml
@@ -43,6 +43,7 @@ jobs:
           git branch -a
           git checkout release_1_0
           git reset --hard
+          git status
           git merge feature/buildpushpr --allow-unrelated-histories
           git checkout -b testprbranch
           git push -u origin testprbranch
