--- a/.github/workflows/build_push_pr copy.yml
+++ b/.github/workflows/build_push_pr copy.yml
@@ -44,6 +44,7 @@ jobs:
           git checkout release_1_0
           git reset --hard
           git status
+          ls .github/workflows
           git merge feature/buildpushpr --allow-unrelated-histories
           git checkout -b testprbranch
           git push -u origin testprbranch
