--- a/.github/workflows/build_push_pr copy.yml
+++ b/.github/workflows/build_push_pr copy.yml
@@ -58,6 +58,7 @@ jobs:
           ls .github/workflows
           git fetch
           git branch -a
+          git checkout remotes/origin/feature/buildpushpr
           git pull origin release_1_0
           git status
           ls .github/workflows
