--- a/.github/workflows/build_push_pr copy.yml
+++ b/.github/workflows/build_push_pr copy.yml
@@ -60,6 +60,7 @@ jobs:
           git branch -a
           git checkout feature/buildpushpr
           git pull
+          git rebase origin/release_1_0
           git pull origin release_1_0
           git status
           ls .github/workflows
