--- a/.github/workflows/build_push_pr copy.yml
+++ b/.github/workflows/build_push_pr copy.yml
@@ -74,6 +74,7 @@ jobs:
           cd rsbc-ride-adapters
           git checkout release_1_0
           git pull
+          git fetch
           git merge feature/buildpushpr
           git checkout -b testprbranch
           git push -u origin testprbranch
