--- a/.github/workflows/build_push_pr copy.yml
+++ b/.github/workflows/build_push_pr copy.yml
@@ -25,8 +25,8 @@ jobs:
 
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      # - name: Checkout repository
+      #   uses: actions/checkout@v3
       # - name: Authenticate and set context
       #   uses: redhat-actions/oc-login@v1.1.2
       #   with:
