--- a/.github/workflows/build_push_pr copy.yml
+++ b/.github/workflows/build_push_pr copy.yml
@@ -80,7 +80,8 @@ jobs:
           git checkout release_1_0   
           git merge feature/buildpushpr 
           git checkout -b testprbranch
-          git push -u origin testprbranch
+          git remote set-url testbranch https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
+          git push -u testbranch testprbranch
 
           
       - name: Build PR
