--- a/.github/workflows/build_push_pr copy.yml
+++ b/.github/workflows/build_push_pr copy.yml
@@ -27,12 +27,12 @@ jobs:
     steps:
       # - name: Checkout repository
       #   uses: actions/checkout@v3
-      # - name: Authenticate and set context
-      #   uses: redhat-actions/oc-login@v1.1.2
-      #   with:
-      #     openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL_SILVER }}
-      #     openshift_token: ${{ secrets.OPENSHIFT_SA_PIPELINE_TOKEN_SILVER }}
-      #     namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools"
+      - name: Authenticate and set context
+        uses: redhat-actions/oc-login@v1.1.2
+        with:
+          openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL_SILVER }}
+          openshift_token: ${{ secrets.OPENSHIFT_SA_PIPELINE_TOKEN_SILVER }}
+          namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools"
       # - name: Merge with target
       #   run: |
       #     git config --global user.email "ride_vips_actions@gov.bc.ca"
@@ -83,17 +83,20 @@ jobs:
           git remote add testbranch https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
           git push -u testbranch testprbranch
 
-          
-      - name: Build PR
-        run: |
-          echo 'build pr'
-      - name: Update deploy manifests for PR to Argocd
-        run: |
-          echo 'update deploy pr'
-      # - name: Apply Build Yaml
+      - name: Checkout repository
+        uses: actions/checkout@v3        
+        with:
+          ref: testprbranch 
+      # - name: Build PR
       #   run: |
-      #     cd rsbc_df_vips_adapter_gateway/github_actions_yamls
-      #     oc process -f revproxy_build_template.yml --param-file revproxy_build_params.yml --param OUTPUT_IMAGE_STREAM_TAG=build-$GITHUB_SHA | oc apply -f -
-      # - name: Start the build and push
+      #     echo 'build pr'
+      # - name: Update deploy manifests for PR to Argocd
       #   run: |
-      #     oc start-build ${{ env.build_config_name }} --follow --wait
+      #     echo 'update deploy pr'
+      - name: Apply Build Yaml
+        run: |
+          cd rsbc_df_vips_adapter_gateway/github_actions_yamls
+          oc process -f revproxy_build_template.yml --param-file revproxy_build_params.yml --param OUTPUT_IMAGE_STREAM_TAG=pr-build-$GITHUB_SHA | oc apply -f -
+      - name: Start the build and push
+        run: |
+          oc start-build ${{ env.build_config_name }} --follow --wait
