--- a/.github/workflows/build_push_pr copy.yml
+++ b/.github/workflows/build_push_pr copy.yml
@@ -27,12 +27,12 @@ jobs:
     steps:
       # - name: Checkout repository
       #   uses: actions/checkout@v3
-      - name: Authenticate and set context
-        uses: redhat-actions/oc-login@v1.1.2
-        with:
-          openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL_SILVER }}
-          openshift_token: ${{ secrets.OPENSHIFT_SA_PIPELINE_TOKEN_SILVER }}
-          namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools"
+      # - name: Authenticate and set context
+      #   uses: redhat-actions/oc-login@v1.1.2
+      #   with:
+      #     openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL_SILVER }}
+      #     openshift_token: ${{ secrets.OPENSHIFT_SA_PIPELINE_TOKEN_SILVER }}
+      #     namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools"
       # - name: Merge with target
       #   run: |
       #     git config --global user.email "ride_vips_actions@gov.bc.ca"
@@ -87,6 +87,12 @@ jobs:
         uses: actions/checkout@v3        
         with:
           ref: testprbranch 
+      - name: Authenticate and set context
+        uses: redhat-actions/oc-login@v1.1.2
+        with:
+          openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL_SILVER }}
+          openshift_token: ${{ secrets.OPENSHIFT_SA_PIPELINE_TOKEN_SILVER }}
+          namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools"
       # - name: Build PR
       #   run: |
       #     echo 'build pr'
