--- a/.github/workflows/build_push_pr.yml
+++ b/.github/workflows/build_push_pr.yml
@@ -2,7 +2,7 @@ name: Build and Push Image for PR
 
 on:
   pull_request:
-    types: [opened, reopened]
+    types: [opened, reopened,edited]
     branches-ignore:   
       - 'main'
       - 'master'
