--- a/.github/workflows/build_push_pr.yml
+++ b/.github/workflows/build_push_pr.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3        
         with:
-          ref: testprbranch 
+          ref: pr-${{ env.PR_NUMBER }}-branch
       - name: Authenticate and set context
         uses: redhat-actions/oc-login@v1.1.2
         with:
@@ -51,10 +51,20 @@ jobs:
       # - name: Update deploy manifests for PR to Argocd
       #   run: |
       #     echo 'update deploy pr'
-      # - name: Apply Build Yaml
-      #   run: |
-      #     cd rsbc_df_vips_adapter_gateway/github_actions_yamls
-      #     oc process -f revproxy_build_template.yml --param-file revproxy_build_params.yml --param OUTPUT_IMAGE_STREAM_TAG=pr-build-$GITHUB_SHA | oc apply -f -
-      # - name: Start the build and push
-      #   run: |
-      #     oc start-build ${{ env.build_config_name }} --follow --wait
+      - name: Apply Build Yaml
+        run: |
+          cd rsbc_df_vips_adapter_gateway/github_actions_yamls
+          oc process -f revproxy_build_template.yml --param-file revproxy_build_params.yml --param OUTPUT_IMAGE_STREAM_TAG=pr-build-$GITHUB_SHA | oc apply -f -
+      - name: Start the build and push
+        run: |
+          oc start-build ${{ env.build_config_name }} --follow --wait
+      - name: Delete Temp Branch
+        run: |
+          git clone "https://github.com/bcgov/rsbc-ride-adapters"
+          git config --global user.email "ride_vips_actions@gov.bc.ca"
+          git config --global user.name "ride_vips_actions"
+          git config --global pull.rebase true
+          cd rsbc-ride-adapters
+          git fetch
+          git remote add testbranch https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
+          git push -d testbranch pr-${{ env.PR_NUMBER }}-branch
