--- a/.github/workflows/build_push_pr.yml
+++ b/.github/workflows/build_push_pr.yml
@@ -16,7 +16,7 @@ jobs:
       build_config_name: "ride-vips-adapter-nginx-proxy-build-v2"
       base_image_tag: "1"
       PR_NUMBER: ${{ github.event.number }}
-      PR_IMAGE_STREAM_TAG: pr-build-$GITHUB_SHA
+      PR_IMAGE_STREAM_TAG: pr-build-${{ github.sha}}
 
 
     steps:
