--- a/.github/workflows/build_push_pr.yml
+++ b/.github/workflows/build_push_pr.yml
@@ -81,7 +81,7 @@ jobs:
         - name: Update Image tag for PR deploy
           uses: mikefarah/yq@v4.28.1
           with:
-            cmd: yq eval -i '.images[0].newTag = "pr-build-${{env.PR_IMAGE_STREAM_TAG}}"' 'ride_vips_adapter/overlays/pr/kustomization.yaml'
+            cmd: yq eval -i '.images[0].newTag = "${{env.PR_IMAGE_STREAM_TAG}}"' 'ride_vips_adapter/overlays/pr/kustomization.yaml'
         - name: Update name suffix for PR deploy
           uses: mikefarah/yq@v4.28.1
           with:
