--- a/.github/workflows/build_push_pr.yml
+++ b/.github/workflows/build_push_pr.yml
@@ -89,4 +89,12 @@ jobs:
         - name: Check Changed value
           run: |
             cat ride_vips_adapter/overlays/pr/kustomization.yaml
+        - name: Push Changes
+          run: |
+            git config user.name github-actions
+            git config user.email github-actions@github.com
+            git checkout -b pr-branch-${{env.PR_NUMBER}}
+            git add .
+            git commit -m "updated"
+            git push -u origin pr-branch-${{env.PR_NUMBER}}
         
