--- a/.github/workflows/build_push_pr.yml
+++ b/.github/workflows/build_push_pr.yml
@@ -83,7 +83,7 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git pull
-          git checkout -b pr-branch-${{env.PR_NUMBER}}  
+          git checkout -B pr-branch-${{env.PR_NUMBER}}  
           git pull        
           git push -u origin pr-branch-${{env.PR_NUMBER}}
       - name: Update Image tag for PR deploy
